--- a/src/index.css
+++ b/src/index.css
@@ -91,33 +91,40 @@ main {
     margin-top: 20px;
     color: #000;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 
 }
 
 .weather-forecast-icon {
     margin: 0 auto;
     display: block;
+    width: 88px;
+    height: 88px;
 
 }
     
 
 .weather-forecast-date {
     font-size: 16px;
-    opacity: 0.5;
     text-align: center;
     margin-bottom: 10px;
     line-height: 20px;
+    color: rgba(39, 33, 66, 0.4);
     
 }
 
 
-.weather-forecast-temperature {
-    font-size: 16px;
+.weather-forecast-temperatures {
     color: #f65282;
     text-align: center;
-    padding: 0 10px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-evenly;
     
+}
+
+.weather-app-temperature {
+    padding: 0 10px;
 }
 
 
@@ -127,4 +134,5 @@ footer {
     text-align: center;
     font-size: 14px;
     color: rgba(0, 0, 0, 0.6);
+    margin-top: 20px;
 }
